--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "PRABATH-MD (1.0.0)",
-  "description": "PRABATH-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
-  "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
+  "name": "KALINDU-MD (1.0.0)",
+  "description": "KALINDU-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
+  "logo": "https://telegra.ph/file/d6c84a358e7f19c9933d4.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "multi device", "prabath-md"],
   "success_url": "/",
 
