--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 "jspdf": "^2.5.1",
 "pino": "^7.0.5",
 "google-tts-api": "^2.0.2",
+"@hapi/boom": "^9.1.4",
 "pm2": "^5.2.0",
 "util": "^0.12.4",
 "express": "latest",
